[tool.poetry]
name = "adaptive-shield"
version = "0.1.0"
description = ""
authors = ["Maor Kadosh <git@avocadosh.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.17"
types-beautifulsoup4 = "^4.12.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
