[tool.poetry]
name = "adaptive-shield"
version = "0.1.0"
description = ""
authors = ["Maor Kadosh <git@avocadosh.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
aiohttp = "^3.8.4"

[tool.poetry.group.dev.dependencies]
types-beautifulsoup4 = "^4.12.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
